--- a/task4/docker-compose.yml
+++ b/task4/docker-compose.yml
@@ -1,8 +1,16 @@
-version: '3.8'
-
 services:
-  atlassoftypinkodocker:
-    image: atlassoftypinkodocker
+  back-end:
     build:
-      context: .
-      dockerfile: ./Dockerfile
+      context: ./back-end
+      dockerfile: Dockerfile
+    ports:
+      - "5252:5252"
+
+  front-end:
+    build:
+      context: ./front-end
+      dockerfile: Dockerfile
+    ports:
+      - "9000:9000"
+    depends_on:
+      - back-end
