Added image file

--- a/task4/docker-compose.yml
+++ b/task4/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   back-end:
+    image: atlassoftypinkodocker-backend
     build:
       context: ./back-end
       dockerfile: Dockerfile
